--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
         Spring related dependencies
         Updated on 2025.04.24, all latest
         -->
-        <spring.boot.version>3.5.3</spring.boot.version>
+        <spring.boot.version>3.5.5</spring.boot.version>
         <spring.cloud.version>2025.0.0</spring.cloud.version>
 
         <!--
@@ -76,8 +76,8 @@
         Updated on 2025.04.24, only protobuf.version cannot use the latest version
         Because the tool that generates stub code has stopped being maintained.
          -->
-        <grpc.version>1.73.0</grpc.version>
-        <protobuf.version>4.31.1</protobuf.version>
+        <grpc.version>1.75.0</grpc.version>
+        <protobuf.version>4.32.0</protobuf.version>
         <grpc.spring.boot.version>3.1.0.RELEASE</grpc.spring.boot.version>
 
         <!--
@@ -90,10 +90,10 @@
         <mybatis.plus.dynamic.version>4.3.1</mybatis.plus.dynamic.version>
 
         <!-- General tools -->
-        <jwt.version>0.12.6</jwt.version>
+        <jwt.version>0.13.0</jwt.version>
         <okhttp.version>4.12.0</okhttp.version>
-        <netty.version>4.2.3.Final</netty.version>
-        <commons.io.version>2.19.0</commons.io.version>
+        <netty.version>4.2.4.Final</netty.version>
+        <commons.io.version>2.20.0</commons.io.version>
         <jakarta.json.version>2.1.3</jakarta.json.version>
         <javax.annotation.version>1.3.2</javax.annotation.version>
         <jakarta.validation.version>3.1.1</jakarta.validation.version>
@@ -110,10 +110,10 @@
         <micrometer.version>1.15.2</micrometer.version>
         <freemarker.version>2.3.34</freemarker.version>
         <apache.poi.version>5.4.1</apache.poi.version>
-        <apache.commons.version>1.27.1</apache.commons.version>
+        <apache.commons.version>1.28.0</apache.commons.version>
         <activation.version>2.1.3</activation.version>
         <jna.version>5.17.0</jna.version>
-        <oshi.version>6.8.2</oshi.version>
+        <oshi.version>6.8.3</oshi.version>
         <milo.version>0.6.16</milo.version>
         <paho.mqttv3.version>1.2.5</paho.mqttv3.version>
         <bouncycastle.version>1.81</bouncycastle.version>
@@ -141,10 +141,10 @@
         Updated on 2025.04.24, all latest
          -->
         <protobuf.plugin.version>0.6.1</protobuf.plugin.version>
-        <graalvm.native.version>0.10.6</graalvm.native.version>
+        <graalvm.native.version>0.11.0</graalvm.native.version>
         <maven.gpg.plugin>3.2.8</maven.gpg.plugin>
         <maven.source.plugin>3.3.1</maven.source.plugin>
-        <maven.javadoc.plugin>3.11.2</maven.javadoc.plugin>
+        <maven.javadoc.plugin>3.11.3</maven.javadoc.plugin>
         <maven.compiler.plugin>3.13.0</maven.compiler.plugin>
         <maven.resource.plugin>3.3.1</maven.resource.plugin>
         <maven.dependency.plugin>3.8.1</maven.dependency.plugin>
@@ -856,6 +856,14 @@
                             </goals>
                         </execution>
                     </executions>
+                    <configuration>
+                        <excludes>
+                            <exclude>
+                                <groupId>org.projectlombok</groupId>
+                                <artifactId>lombok</artifactId>
+                            </exclude>
+                        </excludes>
+                    </configuration>
                 </plugin>
 
                 <!-- Protobuf plugin -->
@@ -890,7 +898,7 @@
                     <version>${graalvm.native.version}</version>
                     <executions>
                         <execution>
-                            <id>build-native</id>
+                            <id>attach-native</id>
                             <goals>
                                 <goal>compile-no-fork</goal>
                             </goals>
@@ -906,7 +914,7 @@
                     <version>${maven.gpg.plugin}</version>
                     <executions>
                         <execution>
-                            <id>sign-artifacts</id>
+                            <id>attach-sign</id>
                             <phase>verify</phase>
                             <goals>
                                 <goal>sign</goal>
@@ -959,9 +967,6 @@
                         <source>${java.version}</source>
                         <encoding>${project.build.sourceEncoding}</encoding>
                         <useIncrementalCompilation>true</useIncrementalCompilation>
-                        <compilerArgs>
-                            <arg>-parameters</arg>
-                        </compilerArgs>
                         <annotationProcessorPaths>
                             <path>
                                 <groupId>org.projectlombok</groupId>
